@@ -105,6 +105,7 @@ sub get_devices {
             my @device_list = @{$data};
             $logger->info( 'Sane->get_devices returned: ',
                 Dumper( \@device_list ) );
+            $self->set( 'device-list', \@device_list );
             if ( @device_list == 0 ) {
                 $self->signal_emit( 'process-error', 'get_devices',
                     __('No devices found') );
@@ -112,7 +113,6 @@ sub get_devices {
                 undef $self;
                 return FALSE;
             }
-            $self->set( 'device-list', \@device_list );
             $hboxd->show_all;
             $self->set( 'cursor', 'default' );
         }
