@@ -1,0 +1,60 @@
+use warnings;
+use strict;
+use Test::More tests => 1;
+use Glib qw(TRUE FALSE);    # To get TRUE and FALSE
+use Gtk3 -init;             # Could just call init separately
+use Image::Sane ':all';     # To get SANE_* enums
+use Sub::Override;    # Override Frontend::Image_Sane to test functionality that
+                      # we can't with the test backend
+use Storable qw(freeze);    # For cloning the options cache
+
+BEGIN {
+    use Gscan2pdf::Dialog::Scan::Image_Sane;
+}
+
+#########################
+
+my $window = Gtk3::Window->new;
+
+Gscan2pdf::Translation::set_domain('gscan2pdf');
+use Log::Log4perl qw(:easy);
+Log::Log4perl->easy_init($WARN);
+my $logger = Log::Log4perl::get_logger();
+
+# The overrides must occur before the thread is spawned in setup.
+my $override = Sub::Override->new;
+$override->replace(
+    'Gscan2pdf::Frontend::Image_Sane::_thread_get_devices' => sub {
+        my ( $self, $uuid ) = @_;
+        $self->{return}->enqueue(
+            {
+                type    => 'finished',
+                process => 'get-devices',
+                uuid    => $uuid,
+                info    => freeze( [] ),
+                status  => SANE_STATUS_GOOD,
+            }
+        );
+        return;
+    }
+);
+Gscan2pdf::Frontend::Image_Sane->setup($logger);
+
+my $dialog = Gscan2pdf::Dialog::Scan::Image_Sane->new(
+    title           => 'title',
+    'transient-for' => $window,
+    'logger'        => $logger
+);
+$dialog->{signal} = $dialog->signal_connect(
+    'changed-device-list' => sub {
+        my ( $self, $devices ) = @_;
+        is_deeply $devices, [], 'changed-device-list called with empty array';
+        Gtk3->main_quit;
+    }
+);
+$dialog->get_devices;
+
+Gtk3->main;
+
+Gscan2pdf::Frontend::Image_Sane->quit;
+__END__
